# course-algorithmic-trading-quantitative-analysis

./: .env.example  .gitignore  README.md
technical-analysis/: README.md  pyproject.toml
technical-analysis/src/technical_analysis/: examples.py  main.py
technical-analysis/src/technical_analysis/caching/: response_cacher.py
technical-analysis/src/technical_analysis/components/: __init__.py  price_charter_component.py  response_cacher_component.py  stock_metric_visualisation_component.py  stock_technical_indication_component.py
technical-analysis/src/technical_analysis/config/: data_view_config.py  default_config.py  paths.py  risk_free_rate_config.py
technical-analysis/src/technical_analysis/enums/: agg_fn.py  api.py  api_dataframing.py  api_source.py  candlespan.py  kpi.py  ohlcvud.py  portfolio_optimization_strategy.py
technical-analysis/src/technical_analysis/indicators/: indicator_calculator.py  instrument_indicators.py  technichart.py
technical-analysis/src/technical_analysis/kpis/: dataframe_kpi_calculator.py  instrument_kpi.py  kpi_calculator.py
technical-analysis/src/technical_analysis/mappers/: __init__.py  aggfn_to_name.py  candlespan_mapper.py  candlespan_to_api.py  candlespan_to_main_json_key.py  candlespan_to_ohlcv_keys.py  candlespan_to_service_method.py  kpi_to_aggfn.py  kpi_to_method.py
technical-analysis/src/technical_analysis/models/: __init__.py  api_enums.py  candlespan_enum.py  candlesticks.py  instrument.py  instrument_group.py  instrument_universe.py  ohlcv_enum.py  portfolio.py  renko.py
(+52 files in other folders)
