[project]
name = "technical-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Manoj Embar Suresh",email = "manoj.es.professional@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "technical_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
